force-app/main/default/objects/Assessment_Question__c/Assessment_Question__c.object-meta.xml
<CustomObject>
    <label>Assessment Question</label>
    <nameField>
        <label>Assessment Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>