force-app/main/default/objects/Assessment_Question__c/fields/Dependent_Answer__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Answer__c</fullName>
    <label>Dependent Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>