force-app/main/default/objects/Assessment_Question__c/fields/Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Question</label>
    <referenceTo>Assessment_Question__c</referenceTo>
    <relationshipLabel>Assessment Questions</relationshipLabel>
    <relationshipName>Assessment_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>