force-app/main/default/objects/Assessment_Question__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the question must be answered.</description>
    <inlineHelpText>Indicates if the question must be answered.</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>