force-app/main/default/objects/Assessment_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Line Text</fullName>
            </value>
            <value>
                <fullName>Paragraph Text</fullName>
            </value>
            <value>
                <fullName>Picklist (Single Select)</fullName>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
            <value>
                <fullName>Checkboxes</fullName>
            </value>
            <value>
                <fullName>Radio Buttons</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>