force-app/main/default/objects/Assessment_Question__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Assessment_Template__c</referenceTo>
    <relationshipLabel>Assessment Questions</relationshipLabel>
    <relationshipName>Assessment_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>