force-app/main/default/objects/Assessment_Question__c/fields/Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rules__c</fullName>
    <label>Validation Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>