force-app/main/default/objects/Assessment_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template__c</columns>
    <columns>Sequence_Number__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Is_Required__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>